--- a/Content/css/corporate.css
+++ b/Content/css/corporate.css
@@ -5,7 +5,7 @@
 @import url('../../css2-2');
 /* variable */
 :root {
-    --base-color: #3C2FC0;
+    --base-color: #203ee8;
     --medium-gray: #878898;
     --dark-gray: #242E45;
     --light-red: #F2F1FC;
